# warGame

./: Board.cpp  Board.hpp  Board.hpp.original  CMakeLists.txt  Demo.cpp  DemoGame.cpp  DemoGame.hpp  FootCommander.cpp  FootCommander.hpp  FootSoldier.cpp  FootSoldier.hpp  Paramedic.cpp  Paramedic.hpp  ParamedicCommander.cpp  ParamedicCommander.hpp  Sniper.cpp  Sniper.hpp  SniperCommander.cpp  SniperCommander.hpp  Soldier.hpp  Test.cpp  Test_Oz.cpp  Test_amichai.cpp  Test_oriane_yirat.cpp  UML  test
